LU-5871 lod: Do not return EAGAIN in lod_object_init

Do not return EWOULDBLOCK (EAGAIN) in lod_object_init(),
otherwise it will confuse lu_object_find_at(), and make
it wait there for no reason, which suppose to only wait
if the object is dying. See call chain
lu_object_find_at()->lu_object_find_try()->lu_object_alloc()
->lod_object_init(), and even worse waitq is not being
initialized yet if the failure happened here.

Change-Id: Ieae434b34c239efea86a4a471fb01e397336a31c
Signed-off-by: Wang Di <di.wang@intel.com>